# embeadings

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOLT_REMOTE.md  LICENSE  README.md  SECURITY.md  manifest  pyproject.toml  rbqg7glnlibpdcbbdi3trpdl6ssvsfci.darc
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  evaluation_report.yml
.github/workflows/: ci.yml  release.yml
assets/brand/: README.md
benchmarks/: benchmark_alternatives.py  benchmark_warm.py
benchmarks/results/: alternatives-apple-arm64-2026-07-15.json
docs/: README.md  consumer-contract.md  ecosystem-sweep.md  evaluation-code-surfaces.md  evaluation-large-corpus.md  evaluation-linear.md  evaluation.md  linear.md  performance.md  spec.md
docs/articles/: dogfooding-v040-worktree-gate.md
docs/decisions/: embedding-storage-alternatives.md  review-budget-default.md
docs/research/: README.md  beads-native-public-diagnostic-01.md  code-surface-private-pilot-02.md  code-surface-public-eval-01.md  code-surface-v040-release-gate.md  linear-private-pilot-01.md  objective-default-public-decision-01.md  private-pilot-01.md  retrieve-verify-context-2026.md  retrieve-verify-private-regression-02.md  retrieve-verify-private-regression-03.md  retrieve-verify-public-regression-01.md  ruff-review-depth-02.md  ruff-scale-surrogate-01.md
examples/: README.md  batch.json  capabilities.json  checkpoint.json  collisions.json  neighbors.json  sweep.json  triage.json
plugins/embeadings/: README.md
plugins/embeadings/.claude-plugin/: plugin.json
plugins/embeadings/.codex-plugin/: plugin.json
plugins/embeadings/scripts/: run-embeadings  run_embeadings.py
plugins/embeadings/skills/collisions/: SKILL.md
plugins/embeadings/skills/evaluate/: SKILL.md
plugins/embeadings/skills/triage/: SKILL.md
schemas/v1/: batch.schema.json  capabilities.schema.json  checkpoint.schema.json  collisions.schema.json  neighbors.schema.json  sweep.schema.json  triage.schema.json
scripts/: evaluate_semantic_fixture.py  prepare_github_evaluation.py  prepare_ranked_evaluation.py  validate.py  verify_release.py  worktree_env.py
src/embead/: __init__.py  _version.py  analysis.py  artifacts.py  beads.py  cache.py  cli.py  doctor.py  explain.py  incremental.py  linear.py  models.py  provider.py  ranking.py  reports.py  surfaces.py  trackers.py  validation.py
tests/: test_analysis.py  test_artifacts.py  test_beads.py  test_benchmark_alternatives.py  test_benchmark_warm.py  test_cli.py  test_doctor.py  test_explain.py  test_github_evaluation.py  test_incremental.py  test_linear.py  test_models.py  test_plugin_contract.py  test_provider_cache.py  test_provider_readiness.py  test_ranked_evaluation.py  test_ranking.py  test_release_artifacts.py  test_release_workflow.py  test_reports.py  test_schemas.py  test_semantic_evaluation_fixture.py  test_surfaces.py  test_validation.py  test_validation_script.py  test_worktree_env.py
tests/fixtures/: beads-1.0.5-list.json  digest-exact-match.json  digest-opencode-roundtrip.json  digest-ralph-stale.json  semantic-gold-v3.json  semantic-hard-negatives-v1.json  semantic-hard-negatives-v2.json
