[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "embeadings"
version = "0.1.0"
description = "Read-only semantic neighborhoods and review batches for Beads"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "filelock>=3.16,<4",
  "huggingface-hub>=1.0,<2",
  "model2vec>=0.8,<0.9",
  "numpy>=1.26,<3",
  "platformdirs>=4.3,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.12,<1",
]

[project.scripts]
embead = "embead.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/embead"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
