[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "embeadings"
dynamic = ["version"]
description = "Read-only semantic neighborhoods and coordination review for work trackers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "filelock>=3.16,<4",
  "huggingface-hub>=1.0,<2",
  "model2vec>=0.8,<0.9",
  "numpy>=1.26,<3",
  "platformdirs>=4.3,<5",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<10",
  "ruff>=0.12,<1",
]
benchmark = [
  "fastembed>=0.8,<0.9",
  "sqlite-vec>=0.1.9,<0.2",
]

[project.scripts]
embead = "embead.cli:main"

[tool.hatch.version]
path = "src/embead/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/embead"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/v1" = "embead/schemas/v1"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
