[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "embeadings"
dynamic = ["version"]
description = "Local-first coordination review for Beads and Linear"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jackson Cantrell" }]
keywords = ["beads", "linear", "semantic-search", "triage", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "filelock>=3.16,<4",
  "huggingface-hub>=1.0,<2",
  "model2vec>=0.8,<0.9",
  "numpy>=1.26,<3",
  "platformdirs>=4.3,<5",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<10",
  "ruff>=0.12,<1",
]
benchmark = [
  "fastembed>=0.8,<0.9",
  "sqlite-vec>=0.1.9,<0.2",
]

[project.scripts]
embead = "embead.cli:main"

[project.urls]
Homepage = "https://github.com/DyrtyJax/embeadings"
Documentation = "https://github.com/DyrtyJax/embeadings/blob/main/docs/README.md"
Issues = "https://github.com/DyrtyJax/embeadings/issues"
Repository = "https://github.com/DyrtyJax/embeadings.git"
Changelog = "https://github.com/DyrtyJax/embeadings/blob/main/CHANGELOG.md"
Releases = "https://github.com/DyrtyJax/embeadings/releases"

[tool.hatch.version]
path = "src/embead/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/embead"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/v1" = "embead/schemas/v1"

[tool.hatch.build.targets.sdist]
only-include = [
  "src",
  "schemas",
  "LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
